[package]
name = "git-cli"
description = "Does cool things with Git repos"
version = "0.1.0"
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ggr"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.2", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
git2 = "0.17"
github-types = "0.1"
inquire = "0.6"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
